# flutter-librsync

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/flutter_librsync_example/: MainActivity.kt
example/integration_test/: benchmark_test.dart  librsync_test.dart  sessions_test.dart  streaming_benchmark_test.dart  streaming_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
go/: go.mod  go.sum  librsync.go
go/librsync/: librsync.go
go_wasm/: go.mod  main.go
ios/: flutter_librsync.podspec
ios/Classes/: flutter_librsync_dummy.m
lib/: flutter_librsync.dart
lib/src/: implementations.dart  interfaces.dart  librsync_native.dart  librsync_web.dart  sessions.dart  streaming.dart  streams.dart
lib/src/ffi/: bindings.dart
linux/: CMakeLists.txt
macos/: flutter_librsync.podspec
macos/Classes/: flutter_librsync_dummy.m
prebuilt/android/arm64-v8a/: libflutter_librsync.h
prebuilt/android/armeabi-v7a/: libflutter_librsync.h
prebuilt/android/x86_64/: libflutter_librsync.h
prebuilt/linux/: libflutter_librsync.h
prebuilt/macos/: libflutter_librsync.dylib  libflutter_librsync_amd64.dylib  libflutter_librsync_arm64.dylib  libflutter_librsync_arm64.h
src/: CMakeLists.txt
test/: implementations_test.dart  sessions_test.dart
web/: librsync.wasm
windows/: CMakeLists.txt
